kubernetes/main/apps/home-automation/dsmr-reader/app/networkpolicy.yaml
---
# yaml-language-server: $schema=https://raw.githubusercontent.com/datreeio/CRDs-catalog/main/cilium.io/ciliumnetworkpolicy_v2.json
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: dsmr-reader
spec:
  endpointSelector:
    matchLabels:
      app.kubernetes.io/name: dsmr-reader
  egress:
    # mosquitto
    - toEndpoints:
        - matchLabels:
            app.kubernetes.io/name: mosquitto
      toPorts:
        - ports:
            - port: "1883"
              protocol: TCP
